<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".DeadPoolActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/deadpool"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/deadpool2">

            </ImageView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:text="DeadPool"
                    android:textColor="@color/red"
                    android:textSize="40dp"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textAlignment="center"
                    android:text="2016 ‧ Action/Comedy ‧ 1h 48m
"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/deadpool_description"
                    android:textColor="@color/orange"
                    android:textAlignment="center"
                    android:textSize="20dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Director: Tim Miller"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Budget: 58 million USD"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/deadDistributed"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/deadBased"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:textColor="@color/white"/>

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginStart="100dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/imdb"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    style="@android:style/Widget.Button"
                    android:text="@string/watch_now"
                    android:textSize="20sp"
                    android:background="@drawable/orange_button_background"
                    android:textColor="@color/white"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    style="@android:style/Widget.Button"
                    android:text="@string/add_fav"
                    android:textSize="20sp"
                    android:background="@drawable/edittext_background"
                    android:textColor="@color/white"
                    />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>